# HydrArgs

./: .gitignore  CMakeLists.txt  Doxyfile  ReadMe.md
.github/workflows/: build-mingw.yml
backends/: AnyOption.cpp  ArgParse.cpp  Argh.cpp  Args.cpp  BoostArgs.cpp  Bugs.md  CLI11.cpp  CMakeLists.txt  Caps_template.cpp.inc  Dropt.cpp  GetPot.cpp  LeanAndMean.cpp  Lyra.cpp  QCommandLine.cpp  ReadMe.md  SimpleOpt.cpp  Sweet.cpp  TCLAP.cpp  argtable3.cpp  backends.json  clipp.cpp  cxxopts.cpp  dlib.cpp  dummy.cpp  ezOptionParser.cpp  getopt.cpp  ketopt.cpp  octargs.cpp
cmake/: FindQt.cmake
demo/: CMakeLists.txt  demo.cpp
discoverer/: CMakeLists.txt  SharedLibFactoryHelper.hpp  discoverer.cpp  searchPaths.cpp  searchPaths.hpp
fallback/: CMakeLists.txt
fallback/errors/: CMakeLists.txt  errorMessages.cpp
fallback/parsing/: CMakeLists.txt  valueParsers.cpp
fallback/positional/: CMakeLists.txt  IPositionalParser.cpp  PositionalParserIterative.cpp  PositionalParserSpannable.cpp
include/HydrArgs/: ArgType.hpp  ArgTypeEnumMapping.hpp  HydrArgs.hpp  api.hpp  args.hpp  exceptions.hpp  result.hpp  scoring.hpp  toolbox.hpp
include/HydrArgs/fallback/: errors.hpp  parsing.hpp
include/HydrArgs/fallback/positional/: IPositionalParser.hpp  iterative.hpp  spannable.hpp
lib/: CMakeLists.txt  HydrArgs.cpp  HydrArgsScoring.cpp  exceptions.cpp
private_include/: num_utils.hpp
tests/: CMakeLists.txt  tests.cpp
